# Lyptus

./: .editorconfig  .gitmodules  CMakeLists.txt  README.md  build.ps1  vcpkg.json
.github/workflows/: build-project.yml  ci.yml
res/: Lyptus.json  build_config.gen.h  version.gen.rc
src/: main.cpp  pch.hpp
src/config/: config.cpp  config.hpp
src/lyptus/: lyptus.cpp  lyptus.hpp
src/patcher/: patcher.cpp  patcher.hpp
